# betting-bot-

./: .dockerignore  .env.example  .gitignore  activate_best.py  alembic.ini  backfill_api_football_matches.py  backfill_odds_features.py  backfill_player_availability_features.py  check_active.py  check_db.py  check_models.py  check_preds.py  fetch_upcoming.py  fetch_wc_predict.py  launch_server.py  pyproject.toml  run_server.bat  test_serialize.py  train_all.py
betting_bot/: __init__.py  cli.py
betting_bot/api/: __init__.py  app.py
betting_bot/api/dependencies/: __init__.py  database.py
betting_bot/api/routes/: __init__.py  data.py  health.py  matches.py  models.py  odds.py  predictions.py  stats.py  worldcup.py
betting_bot/config/: __init__.py  settings.py
betting_bot/core/: __init__.py  config.py  constants.py  exceptions.py
betting_bot/database/: __init__.py  base.py  session.py
betting_bot/database/migrations/: env.py
betting_bot/database/repositories/: __init__.py  base.py  league_repository.py  match_repository.py  odds_repository.py
betting_bot/database/seeds/: seed_all.py  seed_leagues.py  seed_teams.py
betting_bot/features/: __init__.py
betting_bot/features/pipelines/: __init__.py  advanced_features.py  base_pipeline.py  elo_features.py  form_features.py  goal_features.py  h2h_features.py  odds_features.py  player_availability_features.py  xg_features.py
betting_bot/features/transformers/: __init__.py
betting_bot/models/: __init__.py  feature.py  match.py  model_registry.py  odds.py  prediction.py
betting_bot/models/classifiers/: __init__.py  base_classifier.py  base_regressor.py  catboost_classifier.py  (+5 more)
betting_bot/prediction/: __init__.py  confidence.py  predictor.py
betting_bot/services/: __init__.py  api_client.py  api_football_client.py  data_orchestrator.py  elo.py  fifa_player_client.py  football_data_client.py  football_data_co_uk_client.py  odds_api_client.py  sportscore_client.py  statsbomb_client.py  worldcup2026_client.py
betting_bot/training/: __init__.py
betting_bot/utils/: __init__.py  decorators.py  helpers.py
data/mappings/: api_football_team_mapping.json  canonical_team_crosswalk.json  football_data_co_uk_team_mapping.json  team_id_to_canonical_name.json
frontend/: package-lock.json
scripts/: auto_discover_team_mapping.py  build_canonical_team_map.py  check_league_injury_teams.py  compute_elo_ratings.py  debug_player_data.py  discover_api_football_leagues.py  discover_api_football_teams.py  split_holdout_by_odds.py  trivial_baselines.py  verify_calibration.py
(+30 files in other folders)
